--- a/roles/Kibana/tasks/main.yml
+++ b/roles/Kibana/tasks/main.yml
@@ -6,4 +6,4 @@
     hostname: kibana
     volumes: /root/playbooks/roles/Filebeat/files/kibana.yml:/usr/share/filebeat/config/kibana.yml
     networks:
-      - name: pipl-network
+      - name: elk-network
