ansible_connection=docker have been added Now filebeat process started twice in the container as the main filebeat container process didn't send logs to logstash. It seems as bug in filebeat.

--- a/roles/Filebeat/files/filebeat.yml
+++ b/roles/Filebeat/files/filebeat.yml
@@ -1,7 +1,13 @@
----
 filebeat.inputs:
 - type: log
   paths:
   - '/hostfs/var/lib/docker/containers/*/*.log'
 output.logstash:
   hosts: ["logstash:5044"]
+logging.level: debug
+logging.to_files: true
+logging.files:
+  path: /usr/share/filebeat/logs/filebeat.log
+  name: filebeat
+  keepfiles: 7
+  permissions: 0644
