Two mysql containers will be started include whole procedures with git and db inserting.

--- a/nice_to_have.yml
+++ b/nice_to_have.yml
@@ -1,4 +1,5 @@
 ---
 - hosts: localhost
   roles:
-    - Mysql
+    - { role: Mysql, node: mysql-master }
+    - { role: Mysql, node: mysql-slave  }
