New "Fill_data" role has been created.

--- a/nice_to_have.yml
+++ b/nice_to_have.yml
@@ -3,3 +3,4 @@
   roles:
     - { role: Mysql, node: mysql-master, id: 1, password: 1234 }
     - { role: Mysql, node: mysql-slave,  id: 2, password: 1234 }
+    - { role: Fill_data, node: mysql-master,    password: 1234 }
