--- a/roles/Nginx/tasks/main.yml
+++ b/roles/Nginx/tasks/main.yml
@@ -5,6 +5,6 @@
     pull: no
     published_ports: 80:80
     hostname: nginx
-    volumes: /root/ELK_on_DOCKER_with_ANSIBLE/roles/Nginx/files/nginx.conf:/etc/nginx/nginx.conf:ro,/root/ELK_on_DOCKER_with_ANSIBLE/roles/Nginx/files/passwords:/etc/nginx/passwords:rw
+    volumes: /root/ELK_on_DOCKER_with_ANSIBLE/roles/Nginx/files/nginx.conf:/etc/nginx/nginx.conf:rw,/root/ELK_on_DOCKER_with_ANSIBLE/roles/Nginx/files/passwords:/etc/nginx/passwords:rw,/root/ELK_on_DOCKER_with_ANSIBLE/roles/Nginx/files/cert.key:/etc/nginx/cert.key:ro,/root/ELK_on_DOCKER_with_ANSIBLE/roles/Nginx/files/cert.crt:/etc/nginx/cert.crt:ro
     networks:
       - name: elk-network
