--- a/roles/Filebeat/tasks/main.yml
+++ b/roles/Filebeat/tasks/main.yml
@@ -1,10 +1,19 @@
+- set_fact:
+    filebeat_conf: "{{ role_path }}/files/filebeat.yml:/usr/share/filebeat/filebeat.yml:rw"
+    docker_logs: "/var/lib/docker/containers:/hostfs/var/lib/docker/containers:ro"
+    host_logs: "/var/log:/hostfs/var/log:ro"
+
 - docker_container:
     name: filebeat
     image: docker.elastic.co/beats/filebeat:6.3.0
     detach: yes
     pull: no
     hostname: filebeat
-    volumes: /root/ELK_on_DOCKER_with_ANSIBLE/roles/Filebeat/files/filebeat.yml:/usr/share/filebeat/filebeat.yml:rw,/var/lib/docker/containers:/hostfs/var/lib/docker/containers:ro,/var/log:/hostfs/var/log:ro
+#    volumes: /root/ELK_on_DOCKER_with_ANSIBLE/roles/Filebeat/files/filebeat.yml:/usr/share/filebeat/filebeat.yml:rw,/var/lib/docker/containers:/hostfs/var/lib/docker/containers:ro,/var/log:/hostfs/var/log:ro
+    volumes:
+      - "{{ filebeat_conf }}"
+      - "{{ docker_logs }}"
+      - "{{ host_logs }}"
     #env: LOG_LEVEL=DEBUG
     networks:
       - name: elk-network
