--- a/roles/Logstash/tasks/main.yml
+++ b/roles/Logstash/tasks/main.yml
@@ -1,9 +1,13 @@
+- set_fact:
+    logstash_conf: "{{ role_path }}/files/logstash.conf:/usr/share/logstash/pipeline/logstash.conf"
+
 - docker_container:
     name: logstash
     image: docker.elastic.co/logstash/logstash:6.3.0
     detach: yes
     pull: no
     hostname: logstash
-    volumes: /root/ELK_on_DOCKER_with_ANSIBLE/roles/Logstash/files/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    volumes:
+      - "{{ logstash_conf }}"
     networks:
       - name: elk-network
