--- a/roles/Nginx/files/nginx.conf
+++ b/roles/Nginx/files/nginx.conf
@@ -38,8 +38,8 @@ http {
 
     server {
       listen 443;
-      ssl_certificate /etc/nginx/cert.crt;
-      ssl_certificate_key /etc/nginx/cert.key;
+      ssl_certificate /etc/nginx/nginx.crt;
+      ssl_certificate_key /etc/nginx/nginx.pem;
 
       ssl on;
       ssl_session_cache  builtin:1000  shared:SSL:10m;
