--- a/roles/Nginx/files/nginx.conf
+++ b/roles/Nginx/files/nginx.conf
@@ -27,32 +27,46 @@ http {
 
     #gzip  on;
 
-    upstream elasticsearch {
-      server kibana:5601;
-    }
-
     server {
-      listen 80;
-      return 301 https://$host$request_uri;
-    }
-
-    server {
-      listen 443;
+      listen 5601 ssl;
       ssl_certificate /etc/nginx/nginx.crt;
       ssl_certificate_key /etc/nginx/nginx.pem;
 
-      ssl on;
       ssl_session_cache  builtin:1000  shared:SSL:10m;
       ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
       ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
       ssl_prefer_server_ciphers on;
 
-      access_log /var/log/nginx/access.log;
+      access_log /var/log/nginx/kibana_access.log;
       auth_basic "Protected Kibana";
       auth_basic_user_file passwords;
 
+      error_page 497 https://$host:5601$request_uri;
+
       location / {
         proxy_pass http://kibana:5601;
+	proxy_redirect off;
+      }
+    }
+
+    server {
+      listen 9000 ssl;
+      ssl_certificate /etc/nginx/nginx.crt;
+      ssl_certificate_key /etc/nginx/nginx.pem;
+
+      ssl_session_cache  builtin:1000  shared:SSL:10m;
+      ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+      ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+      ssl_prefer_server_ciphers on;
+
+      access_log /var/log/nginx/cerebro_access.log;
+      auth_basic "Protected Cerebro";
+      auth_basic_user_file passwords;
+
+      error_page 497 https://$host:9000$request_uri;
+
+      location / {
+        proxy_pass http://cerebro:9000;
 	proxy_redirect off;
       }
     }
