--- a/start.yml
+++ b/start.yml
@@ -2,7 +2,10 @@
 - hosts: localhost
   roles:
     - Elasticsearch
+    - Journald
     - Filebeat
     - Logstash
     - Kibana
+    - Cerebro
     - Nginx
+    - Curator
